--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "apollo-server": "^2.6.1",
     "apollo-server-express": "^2.6.1",
     "config": "^3.1.0",
+    "express": "^4.17.1",
     "graphql": "^14.3.1",
     "graphql-toolkit": "^0.2.14",
     "mongoose": "^5.5.12",
