--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "REPLACE_ME",
+  "name": "current-time",
   "version": "1.0.0",
   "description": "Simple Hello World that listens on localhost:8080",
   "main": "server.js",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "node server.js"
+    "start": "echo \"Starting application\" && exit 0",
+    "install:client": "cd client && npm install",
+    "start:client": "cd client && npm start",
+    "install:server": "cd server && npm install",
+    "start:server": "cd server && npm start",
+    "postinstall": "run-p install:*",
+    "poststart": "run-p start:*"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
