--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Simple Hello World that listens on localhost:8080",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"no test specified\" && exit 0",
-    "start": "echo \"Starting application\" && exit 0",
+    "test": "run-p test:client test:server",
+    "test:client": "cd client && npm run test:unit",
+    "test:server": "cd server && npm run test",
+    "build": "cd client && npm run build",
     "install:client": "cd client && npm install",
-    "start:client": "cd client && npm start",
     "install:server": "cd server && npm install",
-    "start:server": "cd server && npm start",
     "postinstall": "run-p install:*",
-    "poststart": "run-p start:*"
+    "start": "cd server && npm start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
