--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "install:client": "cd client && npm install",
     "install:server": "cd server && npm install",
     "postinstall": "run-p install:*",
-    "start": "cd server && npm start"
+    "serve": "run-p serve:client start:server",
+    "serve:client": "cd client && npm run serve",
+    "start": "npm run start:server",
+    "start:server": "cd server && npm run start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
