--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,30 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "gen:types": "graphql-codegen --config codegen.yml",
+    "gen:types:watch": "npm gen:types --watch"
   },
   "dependencies": {
+    "@accounts/apollo-link": "^0.15.0",
+    "@accounts/client": "^0.15.0",
+    "@accounts/client-password": "^0.15.0",
+    "@accounts/graphql-client": "^0.15.0",
+    "apollo-boost": "^0.4.3",
     "core-js": "^2.6.5",
+    "graphql": "^14.3.1",
     "vue": "^2.6.10",
+    "vue-apollo": "^3.0.0-rc.1",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.3.0",
+    "@graphql-codegen/typescript": "^1.3.0",
+    "@graphql-codegen/typescript-operations": "^1.3.0",
+    "@types/graphql": "^14.2.1",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
