--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "exit 0;",
-    "watch": "nodemon -e ts -w ./src -x npm run watch:serve",
-    "watch:serve": "ts-node src/index.ts"
+    "watch": "nodemon -e ts -w ./src -x npm run watch:task",
+    "watch:task": "npm run build && npm run start"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.4.5",
@@ -16,6 +17,7 @@
     "@types/graphql": "^14.2.0",
     "@types/mongoose": "^5.5.3",
     "@types/node": "^12.0.4",
+    "concurrently": "^4.1.0",
     "husky": "^2.3.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.17.1",
