--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --production",
     "test": "exit 0;",
     "watch": "nodemon -e ts -w ./src -x npm run watch:task",
     "watch:task": "npm run build && npm run start"
