--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install:client": "cd client && npm install",
     "install:server": "cd server && npm install",
-    "postinstall": "run-p install:*",
+    "postinstall": "npm run install:client",
     "build": "run-p build:*",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
@@ -17,7 +17,8 @@
     "test:server": "cd server && npm run test",
     "watch": "run-p watch:*",
     "watch:client": "cd client && npm run watch",
-    "watch:server": "cd server && npm run watch"
+    "watch:server": "cd server && npm run watch",
+    "devpod": "jx create devpod -l nodejs --sync --reuse --username tokeskovgaard"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5"
