--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "REPLACE_ME",
   "version": "1.0.0",
-  "description": "Simple Hello World that listens on localhost:8080",
+  "description": "Simple Hello World that listens on localhost:4000",
   "main": "server.js",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "node server.js"
+    "start": "node server.js",
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "prod": "tsc && node ./build/app.js"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.0",
+    "express": "^4.17.1",
+    "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.0.0-pre.40"
   }
 }
