--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Hello World that listens on localhost:4000",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "./dist/server.js",
+    "start": "npm run prod",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "tsc && node ./dist/server.js"
   },
