--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Simple Hello World that listens on localhost:4000",
   "scripts": {
-    "test": "echo \"no test specified\" && exit 0",
+    "build": "tsc",
     "start": "npm run prod",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
-    "prod": "tsc && node ./dist/server.js"
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server/app.ts",
+    "prod": "npm run build && node ./dist/server/app.js",
+    "test": "echo \"no test specified\" && exit 0"
   },
   "dependencies": {
     "@types/express": "^4.17.0",
