--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Simple Hello World that listens on localhost:4000",
   "scripts": {
     "test": "echo \"no test specified\" && exit 0",
-    "start": "npm run prod",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
-    "prod": "tsc && node ./dist/server.js"
+    "build": "tsc",
+    "start": "npm run build && npm run prod",
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server/server.ts",
+    "prod": "node ./dist/server/server.js"
   },
   "dependencies": {
     "@types/express": "^4.17.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@types/morgan": "^1.7.36",
     "ts-node-dev": "^1.0.0-pre.40"
   }
 }
