--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist"
